<resources>
    <string name="app_name">FirstWeek</string>
    <string name="recommendName">안광민님,</string>
    <string name="recommendSitu">손질이 어려울 때,</string>
    <string name="recommendHair">추천하는 남자 헤어에요.></string>
    <string name="search">지역, 매장, 스타일을 검색하세요</string>
    <string name="today_stylebook">오늘의 스타일북</string>
    <string name="view_all">모두보기</string>
    <string name="nowhere">- &quot; OOO 가능한 헤어샵은 없나? &quot; 원하는 헤어샵을 한 ···</string>
    <string name="cant">- 장발은 못참지! 가볍게 하기 좋은 리프컷 스타일</string>
    <string name="summer">- 무더운 여름, 바캉스를 시원하게 만들어 주는 짧은 머···</string>
    <string name="home">홈</string>
    <string name="location">내주변</string>
    <string name="stylebook">스타일북</string>
    <string name="reservation">예약</string>
    <string name="me">마이</string>
    <string name="hairshop">헤어샵</string>
    <string name="nailshop">네일샵</string>
    <string name="oneshop">1인샵</string>
    <string name="barbershop">바버샵</string>
    <string name="art">기획전</string>
    <string name="welcome">웰컴쿠폰</string>
    <string name="sale">즉시할인</string>
    <string name="thismonth">이달의혜택</string>
    <string name="add">채널추가</string>
    <string name="tip">스타일TIP</string>
    <string name="location_recommend">홍은동 추천</string>
    <string name="style_recommend">스타일 추천</string>
    <string name="text1">지피지기면,</string>
    <string name="text2">남자 헤어스타일도 성공!</string>
    <string name="text3">요즘 많이 찾는 남자 헤어스타일</string>
    <string name="text4">비슷하지만 다른</string>
    <string name="text5">남자 헤어스타일의 차이</string>
    <string name="text6">애즈펌과 가르마펌의 차이는?</string>
    <string name="text7">스타일북에서 가장 많이 본</string>
    <string name="text8">상반기 인기 콘텐츠 TOP4</string>
    <string name="text9">#머리숱 커버스타일 #앞머리 트렌드</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>