<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_home"
        android:title="@string/home"
        android:icon="@drawable/home"/>
    <item android:id="@+id/action_near"
        android:title="@string/location"
        android:icon="@drawable/location"
        android:enabled="true"/>
    <item android:id="@+id/action_stylebook"
        android:title="@string/stylebook"
        android:icon="@drawable/book"
        android:enabled="true"/>
    <item android:id="@+id/action_reservation"
        android:title="@string/reservation"
        android:icon="@drawable/reservation"
        android:enabled="true"/>
    <item android:id="@+id/action_me"
        android:title="@string/me"
        android:icon="@drawable/me" />
</menu>