<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="false">

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:padding="5dp">
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/bookimage"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_alignParentStart="true"
            android:layout_marginRight="20dp"
            android:background="@drawable/three"
            app:shapeAppearanceOverlay="@style/roundedCorners" />
        <TextView
            android:id="@+id/booktext1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text7"
            android:layout_toEndOf="@+id/bookimage"
            android:layout_alignParentTop="true"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/booktext2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/bookimage"
            android:layout_below="@+id/booktext1"
            android:text="@string/text8"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/booktext3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/bookimage"
            android:layout_below="@+id/booktext2"
            android:layout_marginTop="5dp"
            android:text="@string/text9"
            android:textColor="@color/moredarkgray"
            android:textSize="14sp" />
    </RelativeLayout>



</androidx.cardview.widget.CardView>